manifests/workloads/dalle-mini/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: dalle
  name: dalle
