manifests/workloads/dalle-mini/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dalle-mini
spec:
  serviceName: "dalle-mini"
  selector:
    matchLabels:
      run: dalle-mini
  template:
    metadata:
      labels:
        run: dalle-mini
        app: dalle-mini
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        node-role.kubernetes.io/gpu: "true"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/cloud
                operator: NotIn
                values:
                - "true"
      containers:
      - name: dalle-mini
        image: dalle-mini-image
        ports:
        - containerPort: 8080
          name: web
        # volumeMounts:
        # - name: workspace
        #   mountPath: /workspace
      # volumes:
      # - name: workspace
      #   persistentVolumeClaim:
      #     claimName: workspace-pvc-dalle-mini-0
  # volumeClaimTemplates:
  # - metadata:
  #     name: workspace-pvc
  #     finalizers:
  #       - kubernetes.io/pv-protection
  #   spec:
  #     storageClassName: "nfs-client"
  #     accessModes: [ "ReadWriteOnce" ]
  #     resources:
  #       requests:
  #         storage: 5Gi
