manifests/workloads/dalle-mini/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dalle-mini
  labels:
    run: dalle-mini
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 8080
    protocol: TCP
  selector:
    run: dalle-mini
---
apiVersion: v1
kind: Service
metadata:
  name: dalle-mini-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dalle-mini.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: kube.danmanners.com
  selector:
    run: dalle-mini
  sessionAffinity: None
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dalle-mini-danmanners-com-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dalle-mini.danmanners.com`)
      kind: Rule
      services:
        - name: dalle-mini
          port: 8080
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dalle-mini-danmanners-com-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dalle-mini.danmanners.com`)
      kind: Rule
      services:
        - name: dalle-mini
          port: 8080
  tls:
    secretName: dalle-mini-cert
